Data Transfer modifier slows down redraw of window #49464

Closed
opened 2016-09-27 11:38:43 +02:00 by Andy Goralczyk · 8 comments
Member

System Information
Ubuntu Linux with XFCE Kernel 3.13.0-44-generic
Dalai also confirmed this on his Windows 10 laptop.

Blender Version
2.78 (current master: hash 07de832)

Short description of error
Activating 'Face corner data' makes the interface redraw slow down. Redraw Timer (redraw window) showed a considerable increase:

example file
barber.blend

In the test file I checked the option:
10 x Draw Window: 1639.5280 ms, average: 163.95280361 ms

With face corner data off it returned:
10 x Draw Window: 158.0491 ms, average: 15.80491066 ms

Exact steps for others to reproduce the error
open the file, go to modifier tab on the hair mesh and toggle 'Face Corner Data'
This seems to relate to the amount modifiers of the Source Object. Nevertheless the interface redraw shouldn't be slowed down by this (actual mesh translations, updates, etc are different of course)

**System Information** Ubuntu Linux with XFCE Kernel 3.13.0-44-generic Dalai also confirmed this on his Windows 10 laptop. **Blender Version** 2.78 (current master: hash 07de832) **Short description of error** Activating 'Face corner data' makes the interface redraw slow down. Redraw Timer (redraw window) showed a considerable increase: example file [barber.blend](https://archive.blender.org/developer/F369186/barber.blend) In the test file I checked the option: 10 x Draw Window: 1639.5280 ms, average: 163.95280361 ms With face corner data off it returned: 10 x Draw Window: 158.0491 ms, average: 15.80491066 ms **Exact steps for others to reproduce the error** open the file, go to modifier tab on the hair mesh and toggle 'Face Corner Data' This seems to relate to the amount modifiers of the Source Object. Nevertheless the interface redraw shouldn't be slowed down by this (actual mesh translations, updates, etc are different of course)
Bastien Montagne was assigned by Andy Goralczyk 2016-09-27 11:38:43 +02:00
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy

Odd… very odd…

Odd… very odd…

This issue was referenced by e6dda514ba

This issue was referenced by e6dda514bae1aa53724ac59afc5c98177bbdbdba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @dfelinto

Added subscriber: @dfelinto

The problem is specifically the layers_uv_select_src rna data which is exposed in the UI and (I guess) requires a heavy calculation every time the UI is redraw.

The problem is specifically the **layers_uv_select_src** rna data which is exposed in the UI and (I guess) requires a heavy calculation every time the UI is redraw.
Author
Member

Awesome! thanks for the quick fix!

Awesome! thanks for the quick fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49464
No description provided.